--- a/.gitignore
+++ b/.gitignore
@@ -402,15 +402,16 @@ FodyWeavers.xsd
 *.ilk
 *.db
 
-.temp/
+.Ajedrez/temp/
+Ajedrez/temp/
 Ajedrez/temp/Ajedrez.ilk
 *.idb
 *.pdb
 *.ilk
 *.db
 
-Ajedrez/.vs/Ajedrez/v17/.suo
-Ajedrez/.vs/Ajedrez/v17/.suo
+.Ajedrez/.vs/Ajedrez/v17/.suo
+.Ajedrez/.vs/Ajedrez/v17/.suo
 *.db
 *.pdb
 *.ilk
