--- a/Ajedrez/Ajedrez.vcxproj
+++ b/Ajedrez/Ajedrez.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="InfoErroque.cpp" />
     <ClCompile Include="src\Alfil.cpp" />
     <ClCompile Include="src\board.cpp" />
     <ClCompile Include="src\Caballo.cpp" />
@@ -38,6 +39,7 @@
     <ClCompile Include="src\Torre.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="InfoErroque.h" />
     <ClInclude Include="src\Alfil.h" />
     <ClInclude Include="src\board.h" />
     <ClInclude Include="src\Caballo.h" />
