--- a/Ajedrez/Ajedrez.vcxproj
+++ b/Ajedrez/Ajedrez.vcxproj
@@ -18,6 +18,71 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\Alfil.cpp" />
+    <ClCompile Include="src\Caballo.cpp" />
+    <ClCompile Include="src\Caja.cpp" />
+    <ClCompile Include="src\CajaTexto.cpp" />
+    <ClCompile Include="src\Callbacks.cpp" />
+    <ClCompile Include="src\Camera.cpp" />
+    <ClCompile Include="src\Campo.cpp" />
+    <ClCompile Include="src\Cliente.cpp" />
+    <ClCompile Include="src\CoordinadorAjedrez.cpp" />
+    <ClCompile Include="src\Dama.cpp" />
+    <ClCompile Include="src\DatosRanking.cpp" />
+    <ClCompile Include="src\GestionMenus.cpp" />
+    <ClCompile Include="src\Globals.cpp" />
+    <ClCompile Include="src\IA.cpp" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Movimiento.cpp" />
+    <ClCompile Include="src\Mundo.cpp" />
+    <ClCompile Include="src\NoFinalizadas.cpp" />
+    <ClCompile Include="src\Partida.cpp" />
+    <ClCompile Include="src\Peon.cpp" />
+    <ClCompile Include="src\Pieza.cpp" />
+    <ClCompile Include="src\Ranking.cpp" />
+    <ClCompile Include="src\Rey.cpp" />
+    <ClCompile Include="src\Servidor.cpp" />
+    <ClCompile Include="src\Socket.cpp" />
+    <ClCompile Include="src\Tablero.cpp" />
+    <ClCompile Include="src\Torre.cpp" />
+    <ClCompile Include="src\Vector2D.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\Alfil.h" />
+    <ClInclude Include="src\Caballo.h" />
+    <ClInclude Include="src\Caja.h" />
+    <ClInclude Include="src\CajaTexto.h" />
+    <ClInclude Include="src\Callbacks.h" />
+    <ClInclude Include="src\Camera.h" />
+    <ClInclude Include="src\Campo.h" />
+    <ClInclude Include="src\Cliente.h" />
+    <ClInclude Include="src\CoordinadorAjedrez.h" />
+    <ClInclude Include="src\Dama.h" />
+    <ClInclude Include="src\DatosRanking.h" />
+    <ClInclude Include="src\GestionMenus.h" />
+    <ClInclude Include="src\Globals.h" />
+    <ClInclude Include="src\IA.h" />
+    <ClInclude Include="src\Movimiento.h" />
+    <ClInclude Include="src\Mundo.h" />
+    <ClInclude Include="src\NoFinalizadas.h" />
+    <ClInclude Include="src\Partida.h" />
+    <ClInclude Include="src\Peon.h" />
+    <ClInclude Include="src\Pieza.h" />
+    <ClInclude Include="src\Posicion.h" />
+    <ClInclude Include="src\Ranking.h" />
+    <ClInclude Include="src\Rey.h" />
+    <ClInclude Include="src\Servidor.h" />
+    <ClInclude Include="src\Socket.h" />
+    <ClInclude Include="src\Tablero.h" />
+    <ClInclude Include="src\Torre.h" />
+    <ClInclude Include="src\Vector2D.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="src\nueva.txt" />
+    <Text Include="src\ranking - copia.txt" />
+    <Text Include="src\ranking.txt" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -72,13 +137,13 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>$(SolutionDir)\bin</OutDir>
-    <IntDir>$(SolutionDir)\temp</IntDir>
+    <OutDir>$(SolutionDir)bin</OutDir>
+    <IntDir>$(SolutionDir)temp</IntDir>
     <LibraryPath>C:\Users\bogur\Desktop\Informatica\Trabajo\Ajedrez\Ajedrez\Ajedrez\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutDir>$(SolutionDir)\bin</OutDir>
-    <IntDir>$(SolutionDir)\temp</IntDir>
+    <OutDir>$(SolutionDir)bin</OutDir>
+    <IntDir>$(SolutionDir)temp</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -114,13 +179,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)include;$(SolutionDir)src</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>ETSIDI.lib;freeglut.lib;assimp-vc143-mtd.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>freeglut.lib;assimp-vc143-mtd.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -131,85 +196,17 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)include;$(SolutionDir)src</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>ETSIDI.lib;freeglut.lib;assimp-vc143-mtd.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(SolutionDir)lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>freeglut.lib;assimp-vc143-mtd.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-<<<<<<< HEAD:Ajedrez/Ajedrez.vcxproj
-    <ClCompile Include="src\Alfil.cpp" />
-    <ClCompile Include="src\Caballo.cpp" />
-    <ClCompile Include="src\Callbacks.cpp" />
-    <ClCompile Include="src\Camera.cpp" />
-    <ClCompile Include="src\CoordinadorAjedrez.cpp" />
-    <ClCompile Include="src\Dama.cpp" />
-    <ClCompile Include="src\Globals.cpp" />
-    <ClCompile Include="src\IA.cpp" />
-    <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\GestionMenus.cpp" />
-    <ClCompile Include="src\Movimiento.cpp" />
-    <ClCompile Include="src\Mundo.cpp" />
-    <ClCompile Include="src\Peon.cpp" />
-    <ClCompile Include="src\Pieza.cpp" />
-    <ClCompile Include="src\Rey.cpp" />
-    <ClCompile Include="src\Tablero.cpp" />
-    <ClCompile Include="src\Torre.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="src\Alfil.h" />
-    <ClInclude Include="src\Caballo.h" />
-    <ClInclude Include="src\Callbacks.h" />
-    <ClInclude Include="src\Camera.h" />
-    <ClInclude Include="src\CoordinadorAjedrez.h" />
-    <ClInclude Include="src\Dama.h" />
-    <ClInclude Include="src\Globals.h" />
-    <ClInclude Include="src\IA.h" />
-    <ClInclude Include="src\GestionMenus.h" />
-    <ClInclude Include="src\Movimiento.h" />
-    <ClInclude Include="src\Mundo.h" />
-    <ClInclude Include="src\Peon.h" />
-    <ClInclude Include="src\Pieza.h" />
-    <ClInclude Include="src\Posicion.h" />
-    <ClInclude Include="src\Rey.h" />
-    <ClInclude Include="src\Tablero.h" />
-    <ClInclude Include="src\Torre.h" />
-=======
-    <ClCompile Include="Asciigraphics.cpp" />
-    <ClCompile Include="Campo.cpp" />
-    <ClCompile Include="DatosRanking.cpp" />
-    <ClCompile Include="main.cpp" />
-<<<<<<< HEAD:Ajedrez/Ajedrez.vcxproj
-    <ClCompile Include="Partida.cpp" />
-    <ClCompile Include="Ranking.cpp" />
-    <ClCompile Include="NoFinalizadas.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="AsciiGraphics.h" />
-    <ClInclude Include="Campo.h" />
-    <ClInclude Include="DatosRanking.h" />
-    <ClInclude Include="Partida.h" />
-    <ClInclude Include="Ranking.h" />
-    <ClInclude Include="NoFinalizadas.h" />
->>>>>>> gestionRankings:Proyecto_Cpp/Proyecto_Cpp.vcxproj
-=======
-    <ClCompile Include="Cliente.cpp" />
-    <ClCompile Include="Servidor.cpp" />
-    <ClCompile Include="Socket.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="AsciiGraphics.h" />
-    <ClInclude Include="Cliente.h" />
-    <ClInclude Include="Servidor.h" />
-    <ClInclude Include="Socket.h" />
->>>>>>> Red:Proyecto_Cpp/Proyecto_Cpp.vcxproj
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
