--- a/Ajedrez/Ajedrez.vcxproj.filters
+++ b/Ajedrez/Ajedrez.vcxproj.filters
@@ -35,20 +35,41 @@
     <ClCompile Include="src\Torre.cpp">
       <Filter>Lógica\Source\Piezas</Filter>
     </ClCompile>
-    <ClCompile Include="src\Caja.cpp">
-      <Filter>Motor General\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="src\CajaTexto.cpp">
+    <ClCompile Include="src\GestionMenus.cpp">
       <Filter>Motor General\Source</Filter>
     </ClCompile>
     <ClCompile Include="src\Callbacks.cpp">
       <Filter>Motor General\Source</Filter>
     </ClCompile>
-    <ClCompile Include="src\Cliente.cpp">
-      <Filter>Redes\Source</Filter>
-    </ClCompile>
     <ClCompile Include="src\CoordinadorAjedrez.cpp">
       <Filter>Motor General\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Cliente.cpp">
+      <Filter>Motor General\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Servidor.cpp">
+      <Filter>Motor General\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Socket.cpp">
+      <Filter>Redes\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Ranking.cpp">
+      <Filter>Motor General\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Mundo.cpp">
+      <Filter>Motor General\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Vector2D.cpp">
+      <Filter>Gráficos\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Partida.cpp">
+      <Filter>Motor General\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CajaTexto.cpp">
+      <Filter>Gráficos\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Caja.cpp">
+      <Filter>Gráficos\Source</Filter>
     </ClCompile>
     <ClCompile Include="src\Campo.cpp">
       <Filter>Ficheros\Source</Filter>
@@ -56,29 +77,8 @@
     <ClCompile Include="src\DatosRanking.cpp">
       <Filter>Ficheros\Source</Filter>
     </ClCompile>
-    <ClCompile Include="src\GestionMenus.cpp">
-      <Filter>Motor General\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Mundo.cpp">
-      <Filter>Motor General\Source</Filter>
-    </ClCompile>
     <ClCompile Include="src\NoFinalizadas.cpp">
       <Filter>Ficheros\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Partida.cpp">
-      <Filter>Ficheros\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Ranking.cpp">
-      <Filter>Ficheros\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Servidor.cpp">
-      <Filter>Redes\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Socket.cpp">
-      <Filter>Redes\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Vector2D.cpp">
-      <Filter>Motor General\Source</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -127,20 +127,41 @@
     <ClInclude Include="src\DatosBloqueoJaque.h">
       <Filter>Lógica\Headers</Filter>
     </ClInclude>
-    <ClInclude Include="src\Caja.h">
-      <Filter>Motor General\Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="src\CajaTexto.h">
+    <ClInclude Include="src\GestionMenus.h">
       <Filter>Motor General\Headers</Filter>
     </ClInclude>
     <ClInclude Include="src\Callbacks.h">
       <Filter>Motor General\Headers</Filter>
     </ClInclude>
-    <ClInclude Include="src\Cliente.h">
-      <Filter>Redes\Headers</Filter>
-    </ClInclude>
     <ClInclude Include="src\CoordinadorAjedrez.h">
       <Filter>Motor General\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Cliente.h">
+      <Filter>Motor General\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Servidor.h">
+      <Filter>Motor General\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Socket.h">
+      <Filter>Redes\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Ranking.h">
+      <Filter>Motor General\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Mundo.h">
+      <Filter>Motor General\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Vector2D.h">
+      <Filter>Gráficos\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Partida.h">
+      <Filter>Motor General\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CajaTexto.h">
+      <Filter>Gráficos\Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Caja.h">
+      <Filter>Gráficos\Headers</Filter>
     </ClInclude>
     <ClInclude Include="src\Campo.h">
       <Filter>Ficheros\Headers</Filter>
@@ -148,29 +169,8 @@
     <ClInclude Include="src\DatosRanking.h">
       <Filter>Ficheros\Headers</Filter>
     </ClInclude>
-    <ClInclude Include="src\GestionMenus.h">
-      <Filter>Motor General\Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Mundo.h">
-      <Filter>Motor General\Headers</Filter>
-    </ClInclude>
     <ClInclude Include="src\NoFinalizadas.h">
       <Filter>Ficheros\Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Partida.h">
-      <Filter>Ficheros\Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Ranking.h">
-      <Filter>Ficheros\Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Servidor.h">
-      <Filter>Redes\Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Socket.h">
-      <Filter>Redes\Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Vector2D.h">
-      <Filter>Motor General\Headers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
